--- a/.env
+++ b/.env
@@ -4,4 +4,12 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="file:./dev.db"
+# DATABASE_URL="file:./dev.db"
+
+POSTGRES_URL="postgres://default:VfI8jlvGaRT9@ep-wispy-moon-29621766-pooler.ap-southeast-1.postgres.vercel-storage.com:5432/verceldb"
+POSTGRES_PRISMA_URL="postgres://default:VfI8jlvGaRT9@ep-wispy-moon-29621766-pooler.ap-southeast-1.postgres.vercel-storage.com:5432/verceldb?pgbouncer=true&connect_timeout=15"
+POSTGRES_URL_NON_POOLING="postgres://default:VfI8jlvGaRT9@ep-wispy-moon-29621766.ap-southeast-1.postgres.vercel-storage.com:5432/verceldb"
+POSTGRES_USER="default"
+POSTGRES_HOST="ep-wispy-moon-29621766-pooler.ap-southeast-1.postgres.vercel-storage.com"
+POSTGRES_PASSWORD="VfI8jlvGaRT9"
+POSTGRES_DATABASE="verceldb"
